@@ -1,7 +1,7 @@
 package com.backend.autocarrerbridge.service.impl;
 
 import com.backend.autocarrerbridge.converter.MajorConverter;
-import com.backend.autocarrerbridge.dto.MajorDTO;
+import com.backend.autocarrerbridge.dto.request.major.MajorRequest;
 import com.backend.autocarrerbridge.entity.Major;
 import com.backend.autocarrerbridge.entity.Section;
 import com.backend.autocarrerbridge.exception.AppException;
@@ -13,31 +13,33 @@ import jakarta.transaction.Transactional;
 import java.time.LocalDateTime;
 import java.util.Comparator;
 import java.util.List;
-import java.util.stream.Collectors;
-import org.springframework.beans.factory.annotation.Autowired;
+
+
+import lombok.RequiredArgsConstructor;
+
 import org.springframework.stereotype.Service;
 
 @Service
+@RequiredArgsConstructor
 public class MajorServiceImpl implements MajorService {
 
-  @Autowired
-  private MajorRepository majorRepository;
 
-  @Autowired
-  private SectionRepository sectionRepository;
+  private final MajorRepository majorRepository;
+
+  private final SectionRepository sectionRepository;
 
 
   @Transactional
   @Override
-  public MajorDTO createMajor(MajorDTO majorDTO) {
-    Section section = sectionRepository.findById(majorDTO.getSectionId())
-        .orElseThrow(() -> new AppException("Không tìm thấy khoa",
+  public MajorRequest createMajor(MajorRequest majorRequest) {
+    Section section = sectionRepository.findById(majorRequest.getSectionId())
+        .orElseThrow(() -> new AppException(
             ErrorCode.ERROR_SECTION_NOT_FOUND));
-    if (majorRepository.findByName(majorDTO.getName()) != null) {
-      throw new AppException("Tên khoa đã tồn tại", ErrorCode.ERROR_NAME);
+    if (majorRepository.findByName(majorRequest.getName()) != null) {
+      throw new AppException(ErrorCode.ERROR_NAME);
     }
 
-    Major major = MajorConverter.convertToEntity(majorDTO);
+    Major major = MajorConverter.convertToEntity(majorRequest);
     major.setSection(section);
     Major saveMajor = majorRepository.save(major);
     return MajorConverter.convertToDTO(saveMajor);
@@ -45,14 +47,14 @@ public class MajorServiceImpl implements MajorService {
 
   @Transactional
   @Override
-  public MajorDTO updateMajor(int id, MajorDTO majorDTO) {
+  public MajorRequest updateMajor(int id, MajorRequest majorRequest) {
     Major major = majorRepository.findById(id)
-        .orElseThrow(() -> new AppException("Chuyên ngành không tồn tại", ErrorCode.NOT_FOUNDED));
-    major.setCode(majorDTO.getCode());
-    major.setName(majorDTO.getName());
-    major.setStatus(majorDTO.getStatus());
-    major.setNumberStudent(majorDTO.getNumberStudent());
-    major.setDescription(majorDTO.getDescription());
+        .orElseThrow(() -> new AppException(ErrorCode.NOT_FOUNDED));
+    major.setCode(majorRequest.getCode());
+    major.setName(majorRequest.getName());
+    major.setStatus(majorRequest.getStatus());
+    major.setNumberStudent(majorRequest.getNumberStudent());
+    major.setDescription(majorRequest.getDescription());
     major.setUpdatedAt(LocalDateTime.now());
     Major updateMajor = majorRepository.save(major);
 
@@ -61,24 +63,24 @@ public class MajorServiceImpl implements MajorService {
 
 
   @Override
-  public MajorDTO deleteMajor(int id) {
+  public MajorRequest deleteMajor(int id) {
     Major major = majorRepository.findById(id)
-        .orElseThrow(() -> new AppException("Chuyên ngành không tồn tại", ErrorCode.NOT_FOUNDED));
+        .orElseThrow(() -> new AppException( ErrorCode.NOT_FOUNDED));
     majorRepository.delete(major);
     return MajorConverter.convertToDTO(major);
   }
 
   @Override
-  public List<MajorDTO> getAllMajor() {
+  public List<MajorRequest> getAllMajor() {
     List<Major> majors = majorRepository.findAll();
     majors.sort(Comparator.comparingLong(Major::getId).reversed());
-    return majors.stream().map(MajorConverter::convertToDTO).collect(Collectors.toList());
+    return majors.stream().map(MajorConverter::convertToDTO).toList();
   }
 
   @Override
-  public List<MajorDTO> getMajorById(int id) {
+  public List<MajorRequest> getMajorById(int id) {
     Major major = majorRepository.findById(id)
-        .orElseThrow(() -> new AppException("Chuyên ngành không tồn tại", ErrorCode.NOT_FOUNDED));
+        .orElseThrow(() -> new AppException(ErrorCode.NOT_FOUNDED));
     return List.of(MajorConverter.convertToDTO(major));
   }
 }
